--- a/app/src/main/res/layout/item_added_item.xml
+++ b/app/src/main/res/layout/item_added_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/customerItem"
+        android:id="@+id/productItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dp_12"
@@ -17,15 +17,23 @@
             android:padding="@dimen/dp_6">
 
             <TextView
-                android:id="@+id/customerName"
+                android:id="@+id/tvMedicineName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="AB Medicals"
                 android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tvQuantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="150.00"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
