--- a/app/src/main/res/layout/activity_sales_rep_home.xml
+++ b/app/src/main/res/layout/activity_sales_rep_home.xml
@@ -2,7 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,6 +19,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/btBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,10 +34,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/dp_12"
                 android:paddingVertical="@dimen/dp_8"
-                android:text="Medical Representative"
+                android:text="Sales Representative Home"
                 android:textAlignment="center"
                 android:textColor="#FFF"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold" />
 
             <View
@@ -62,6 +63,7 @@
             android:text="New Order"
             android:textColor="@color/white"
             android:textStyle="bold"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toTopOf="@+id/btOrdersLists"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -79,6 +81,7 @@
             android:text="Orders Lists"
             android:textColor="@color/white"
             android:textStyle="bold"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toTopOf="@+id/btOutStanding"
             app:layout_constraintEnd_toEndOf="@+id/btNewOrder"
             app:layout_constraintHorizontal_bias="0.5"
@@ -92,14 +95,69 @@
             android:layout_marginHorizontal="@dimen/dp_12"
             android:layout_marginTop="12dp"
             android:background="@drawable/button_one"
-            android:text="OutStanding"
+            android:text="Outstanding"
             android:textColor="@color/white"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toTopOf="@id/btSync"
             app:layout_constraintEnd_toEndOf="@+id/btOrdersLists"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="@+id/btOrdersLists"
             app:layout_constraintTop_toBottomOf="@+id/btOrdersLists" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btSync"
+            android:layout_width="@dimen/dp_250"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_12"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/button_one"
+            android:text="Sync Local"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toTopOf="@id/btSyncMaster"
+            app:layout_constraintEnd_toEndOf="@+id/btOrdersLists"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/btOrdersLists"
+            app:layout_constraintTop_toBottomOf="@+id/btOutStanding" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btSyncMaster"
+            android:layout_width="@dimen/dp_250"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_12"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/button_one"
+            android:text="Sync Master"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toTopOf="@id/btSetting"
+            app:layout_constraintEnd_toEndOf="@+id/btOrdersLists"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/btOrdersLists"
+            app:layout_constraintTop_toBottomOf="@+id/btSync" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btSetting"
+            android:layout_width="@dimen/dp_250"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_12"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/button_one"
+            android:text="Settings"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/btOrdersLists"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/btOrdersLists"
+            app:layout_constraintTop_toBottomOf="@+id/btSyncMaster" />
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
