--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="red">#FF0000</color>
     <color name="black">#000000</color>
+    <color name="blue">#0000FF</color>
+    <color name="green">#AAFF00</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="bt_one">#FFFFFFFF</color>
