--- a/app/src/main/res/layout/item_medicines.xml
+++ b/app/src/main/res/layout/item_medicines.xml
@@ -16,14 +16,16 @@
 
             <TextView
                 android:id="@+id/tvMedicineName"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Dolo 120"
                 android:textColor="@color/black"
                 android:textSize="@dimen/sp_18"
                 android:textStyle="bold"
                 android:layout_marginTop="@dimen/dp_4"
+                android:layout_marginEnd="@dimen/dp_4"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/btAddQty"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
@@ -94,21 +96,24 @@
             </LinearLayout>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/btAddQty"
                 style="@style/Tv_Style1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="6dp"
+                android:layout_marginBottom="@dimen/dp_4"
                 android:background="@drawable/button_one"
                 android:text="Quantity"
                 android:textAlignment="center"
-                android:textColor="@color/black"
+                android:textColor="@color/white_to_black"
                 android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@id/tvMedicineName"
-                app:layout_constraintEnd_toStartOf="@id/btFreeQty"
-                app:layout_constraintTop_toTopOf="@id/tvMedicineName" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/tvMedicineName"
+                app:layout_constraintBottom_toTopOf="@id/btFreeQty"/>
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/btFreeQty"
                 style="@style/Tv_Style1"
                 android:layout_width="wrap_content"
@@ -119,9 +124,51 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textStyle="normal"
-                app:layout_constraintBottom_toBottomOf="@id/tvMedicineName"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/tvMedicineName" />
+                app:layout_constraintTop_toBottomOf="@id/btAddQty"
+                app:layout_constraintBottom_toBottomOf="@id/dateOfVisitLT"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/dateOfVisitLT"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <EditText
+                    android:id="@+id/etQuantity"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:hint="Quantity"
+                    android:layout_marginEnd="@dimen/dp_4"
+                    android:background="@drawable/et_bg_1"/>
+
+                <EditText
+                    android:id="@+id/etFreeQuantity"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:hint="Free Quantity"
+                    android:layout_marginEnd="@dimen/dp_4"
+                    android:background="@drawable/et_bg_1"/>
+
+                <TextView
+                    android:id="@+id/btSaveQty"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/button_one"
+                    android:text="Save"
+                    android:gravity="center"
+                    android:textAlignment="center"
+                    android:textColor="@color/white_to_black"
+                    android:textStyle="bold"
+                    android:layout_gravity="center_vertical"
+                    android:paddingHorizontal="@dimen/dp_12"/>
+
+
+            </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
